...
        }
        Button(
            onClick = onCreateList,
            modifier = Modifier
                .fillMaxWidth()
                .padding(horizontal = 16.dp, vertical = 24.dp)
                .semantics { contentDescription = "Add list" },
        ) {
            Text(stringResource(R.string.new_list))
        }
    }
}

...
